fix css on mobile

--- a/src/components/dashboard/MenuGroupDashboard.scss
+++ b/src/components/dashboard/MenuGroupDashboard.scss
@@ -141,11 +141,9 @@
   .menu-group-dashboard-page {
     // border: $test;
     margin: 2em;
-    margin-top: 120px;
+    margin-top: 150px;
   
     .add-group-part {
-  
-      height: 30vh;
 
       .title {
         font-size: 1.1em;
@@ -174,7 +172,7 @@
   .menu-group-dashboard-page {
     // border: $test;
     margin: 1em;
-    margin-top: 120px;
+    margin-top: 150px;
   
     .add-group-part {
   
